fix modal spacing

--- a/spot-web/src/app/components/helpers/modal/modal.component.scss
+++ b/spot-web/src/app/components/helpers/modal/modal.component.scss
@@ -51,6 +51,7 @@
     .spot-modal-body {
       max-width: 95%;
       top: 65px;
+      transform: translateX(-50%);
     }
 
   }
